// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildFilterConfigData it should return a dictionary of groupOfFilter by key of group 1`] = `
Object {
  "0": Array [
    Object {
      "field": "price",
      "id": "priceMin",
      "operand": 200,
      "operator": "gt",
    },
  ],
  "1": Array [
    Object {
      "field": "price",
      "id": "priceMax",
      "operand": 500,
      "operator": "lt",
    },
  ],
  "2": Array [
    Object {
      "field": "numberOfPeople",
      "id": "numberOfPeople",
      "operand": 2,
      "operator": "equals",
    },
  ],
  "3": Array [
    Object {
      "field": "activity",
      "id": "activity-1",
      "operand": "swimming",
      "operator": "contains",
    },
    Object {
      "field": "activity",
      "id": "activity-2",
      "operand": "tennis",
      "operator": "contains",
    },
    Object {
      "field": "activity",
      "id": "activity-3",
      "operand": "golfing",
      "operator": "contains",
    },
  ],
}
`;

exports[`buildFilterConfigData it should return all the filter group ids 1`] = `
Array [
  "0",
  "1",
  "2",
  "3",
]
`;

exports[`buildFilterConfigData it should return all the filter ids 1`] = `
Array [
  "priceMin",
  "priceMax",
  "numberOfPeople",
  "activity-1",
  "activity-2",
  "activity-3",
]
`;

exports[`buildFilterConfigData it should return only the filter ids not applied 1`] = `
Array [
  "priceMax",
  "numberOfPeople",
  "activity-3",
]
`;

exports[`buildFilterConfigData it should return only the filters applied 1`] = `
Array [
  Object {
    "field": "price",
    "id": "priceMin",
    "operand": 200,
    "operator": "gt",
  },
  Object {
    "field": "activity",
    "id": "activity-1",
    "operand": "swimming",
    "operator": "contains",
  },
  Object {
    "field": "activity",
    "id": "activity-2",
    "operand": "tennis",
    "operator": "contains",
  },
]
`;

exports[`buildFilterConfigData it should return only the filters not applied 1`] = `
Array [
  Object {
    "field": "price",
    "id": "priceMax",
    "operand": 500,
    "operator": "lt",
  },
  Object {
    "field": "numberOfPeople",
    "id": "numberOfPeople",
    "operand": 2,
    "operator": "equals",
  },
  Object {
    "field": "activity",
    "id": "activity-3",
    "operand": "golfing",
    "operator": "contains",
  },
]
`;

exports[`buildFilterConfigData it should return the filterGroupId associated to the filter activity-1 1`] = `"3"`;

exports[`buildFilterConfigData it should return the filterGroupId associated to the filter activity-2 1`] = `"3"`;

exports[`buildFilterConfigData it should return the filterGroupId associated to the filter activity-3 1`] = `"3"`;

exports[`buildFilterConfigData it should return the filterGroupId associated to the filter numberOfPeople 1`] = `"2"`;

exports[`buildFilterConfigData it should return the filterGroupId associated to the filter priceMax 1`] = `"1"`;

exports[`buildFilterConfigData it should return the filterGroupId associated to the filter priceMin 1`] = `"0"`;
